Fix spacing on full_width layout option

--- a/themes/nuboot_radix/panels/layouts/dkan_front/dkan_front.css
+++ b/themes/nuboot_radix/panels/layouts/dkan_front/dkan_front.css
@@ -14,7 +14,7 @@
   padding: 15px;
 }
 .panel-dkan-front .panel-hero .inside {
-  padding: 40px 15px;
+  padding: 30px 15px;
 }
 
 .panel-dkan-front .panel-hero .panel-col-first,
